fix: toolbar button menu alignment

--- a/assets/styling/toolbar.scss
+++ b/assets/styling/toolbar.scss
@@ -35,6 +35,7 @@ $toolbar-border: solid gray 1px;
   position: absolute;
   position-area: bottom left;
   display: flex;
+  flex-direction: column;
   align-self: unset;
   background-color: $toolbar-color;
   border: $toolbar-border;
@@ -58,15 +59,15 @@ $toolbar-border: solid gray 1px;
 
 .toolbar-menu-button>span {
   color: gray;
-  margin-left: 12px;
-  text-align: right;
+  margin-left: auto;
+  justify-content: right;
 }
 
 .toolbar-menu-button {
-  text-align: left;
   flex-wrap: nowrap;
   flex-shrink: 0;
   flex-grow: 1;
+  column-gap: 12px;
 }
 
 #toolbar-file-menu {
